# imsg-agent

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  ROADMAP.md  pyproject.toml
agent/: __init__.py  archive_main.py  archive_store.py  archiver.py  config.py  contact_enrichment.py  drafter.py  inbox.py  main.py  models.py  nudger.py  rpc_client.py  sender.py  store.py  summarizer.py
agent/prompts/: draft_v1.txt
config/: imsg.json
scripts/: install_launchd.sh  setup.sh
tests/: test_archive_main.py  test_archive_store.py  test_archiver.py  test_config.py  test_contact_enrichment.py  test_drafter.py  test_inbox.py  test_nudger.py  test_rpc_client.py  test_sender.py  test_store.py  test_summarizer.py
tests/fixtures/: chats_list_response.json  watch_notification.json
