[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imsg-agent"
version = "0.1.0"
description = "AI agent for managing iMessage communications via imsg"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-pyyaml",
    "types-aiofiles",
]

[project.scripts]
imsg-agent = "agent.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires live imsg binary and Full Disk Access",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
